austria/styles.css
html {
    background-color: #333;
    font-family: "Nunito", sans-serif;
}

.content {
    text-align: center;
}

.image, .list-image {
    margin-top: 50px;
}

.image img, .list-image img {
    border-radius: 10px;
}

ul > li {
    margin-bottom: 20px;
}

.list-image {
    margin-bottom: 50px;
}

.caption {
    font-size: 20px;
    font-style: italic;
    color: #dbdbdb;
}

.sections {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 80vw;
    margin-left: 10vw;
    height: auto;
}

.section {
    max-width: 40vw;
    font-size: 25px;
    color: #dbdbdb;
}

.section * {
    max-width: 30vw;
    margin-left: auto;
    margin-right: auto;
}

.section > ul {
    padding-left: 0;
    list-style-position: inside;
}

.first-slide {
    background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_Austria.svg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    text-align: center;
}

.first-slide-title {
    margin-top: 5%;
    font-size: 200px;
    font-weight: bold;
    color: white;
    text-shadow: 2px 2px 2px #333;
}

.title {
    font-size: 60px;
    font-weight: bold;
    color: white;
}

.subtitle {
    font-size: 40px;
    font-weight: 200;
    text-decoration: underline;
    text-decoration-thickness: 2px;
    color: #ebebeb;
}

.links {
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    display: flex;
    width: 200px;
}

.first-slide-link {
    color: red;
    cursor: pointer;
    font-size: 60px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 12%;
    width: fit-content;
}

.link {
    color: rgb(0, 183, 255);
    cursor: pointer;
    font-size: 35px;
    display: block;
    margin: auto;
    width: fit-content;
}

.link:hover {
    color: aqua;
}

.link-mid-text {
    color: rgb(0, 183, 255);
    cursor: pointer;
}

.link-mid-text:hover {
    color: aqua;
}

#provinces {
    border-collapse: collapse;
    border-radius: 10px;
}

table td, table th {
    border: 1px solid #dbdbdb;
    padding: 26.5px;
}

.table-img {
    height: 100px;
}

#national-anthem {
    width: 100%;
    height: 100%;
}

.fade-out {
    animation: fade-out 1s;
    animation-fill-mode: forwards;
}

@keyframes fade-out {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0; display: none;
    }
}

.fade-in {
    animation: fade-in 1s;
    animation-fill-mode: forwards;
}

@keyframes fade-in {
    0% {
        opacity: 0; display: none;
    }
    100% {
        opacity: 1;
    }
}

